# sanskrit-agents

./: .gitignore  CLAUDE.md  LICENSE  README.md  commentary-grounded-translation-plan.md  phase1-plan.md
agent/: pyproject.toml
agent/data/: MANIFEST.md
agent/data/alignment/: alignment_report.md  gold_projection.json  spot_check.md  trimsika_alignment.json
agent/data/eval/: answer_key.json  human_baseline.json  mitra.json  raw_llm.json
agent/data/mula/: coverage_report.md  trimsika.json
agent/handrun/v02/: apparatus.json  apparatus.md  notes.md  verify_claims.py
agent/logs/: llm_usage.jsonl  vidyut_verifications.jsonl
agent/logs/sanity/: byt5_report.md
agent/output/: citation_audit.json  citation_audit.md  comparison.md
agent/output/ablations/: ablation_report.md
agent/output/v01/: apparatus.json  apparatus.md
agent/output/v02/: apparatus.json
agent/output/v03/: apparatus.json  apparatus.md
agent/output/v04/: apparatus.json  apparatus.md
agent/output/v05/: apparatus.json  apparatus.md
agent/output/v06/: apparatus.json  apparatus.md
agent/output/v07/: apparatus.json  apparatus.md
agent/output/v08/: apparatus.json
agent/output/v09/: apparatus.json  apparatus.md
agent/output/v10/: apparatus.json  apparatus.md
agent/prompts/: reasoner_v1.md
agent/scripts/: 00_setup_check.py  01_sanity_byt5.py  02_sanity_vidyut.py  03_fetch_mula.py  04_align.py  05_project_gold.py  06_run_verse.py  07_run_all.py  08_baselines.py  09_compare.py  10_build_mw.py  11_test_runner.py  12_citation_audit.py  13_ablations.py  14_eval_packets.py  15_score_eval.py
(+166 files in other folders)
