[project]
name = "shastrartha"
version = "0.1.0"
description = "Commentary-grounded, grammar-verified translation agent for Sanskrit (Phase 0: Triṃśikā-bhāṣya testbed)"
requires-python = ">=3.13"
dependencies = [
    "rapidfuzz>=3.14.5",
    "requests>=2.34.2",
    "vidyut>=0.4.0",
]

[dependency-groups]
ml = [
    "torch>=2.13.0",
    "transformers>=5.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shastrartha"]
